Mon Aug  4 12:03:38 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (argstr_get_word): Plug some memory leaks.

Mon Aug  4 01:05:12 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): The return value was a bit
	  groff-specific. Now just return the status of the last command in
	  the pipeline, as reported by wait().

Mon Aug  4 00:31:44 BST 2003  Colin Watson  <cjwatson@debian.org>

	Add support for getting stdio streams for input and output. Needs
	library support because pipeline_wait() needs to know to close the
	stream rather than the underlying file descriptor.

	* lib/pipeline.h (struct pipeline): New infile and outfile members.
	  (pipeline_get_infile, pipeline_get_outfile): Add prototypes.
	* lib/pipeline.c (pipeline_new): Initialize infile and outfile.
	  (pipeline_join): Likewise.
	  (pipeline_get_infile, pipeline_get_outfile): New functions.
	  (pipeline_wait): Check for infile and outfile and fclose() them in
	  preference to close()ing infd and outfd. Check for errors on
	  close().

Sun Aug  3 23:59:18 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Use dup2() instead of close()
	  then dup().

Sun Aug  3 23:52:14 BST 2003  Colin Watson  <cjwatson@debian.org>

	infd and outfd should now only be set by pipeline_start(). Positive
	values in want_in and want_out now indicate caller-supplied file
	descriptors, while negative values indicate a request for
	pipeline_start() to create a pipe.

	* lib/pipeline.h (struct pipeline): Document this.
	* lib/pipeline.c (pipeline_start): Implement it. Caller-supplied
	  input and output file descriptors previously didn't work properly.
	  (pipeline_wait): Update TODO comment.

Sun Aug  3 21:07:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (struct command): New 'nice' member.
	* lib/pipeline.c (command_new): Initialize nice.
	  (pipeline_start): Change child process priority if nice is set.
