@@ -1,3 +1,10 @@
+Mon Aug  4 19:30:22 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_dump): New function to dump a printable
+	  representation of a pipeline to a stream.
+	  (pipeline_tostring): Likewise, but to a newly allocated string.
+	* lib/pipeline.h: Prototype these.
+
 Mon Aug  4 12:03:38 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (argstr_get_word): Plug some memory leaks.
